[package]
name = "normalize_addresses"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.32"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
